--- a/community/learn/graphql-tutorials/backend-services/homepage/src/styles/styles.scss
+++ b/community/learn/graphql-tutorials/backend-services/homepage/src/styles/styles.scss
@@ -312,7 +312,7 @@ ul
         font-weight: 700;
         text-transform: uppercase;
         padding: 0;
-        color: #ffffff;
+        color: #ffffff !important;
         opacity: 0.5;
         &:hover
         {
