--- a/server/src-rsr/trigger.sql.j2
+++ b/server/src-rsr/trigger.sql.j2
@@ -6,21 +6,23 @@ CREATE OR REPLACE function hdb_views.{{QUALIFIED_TRIGGER_NAME}}() RETURNS trigge
     _new record;
     _data json;
   BEGIN
-    IF TG_OP = 'UPDATE' THEN
-      _old := {{OLD_ROW}};
-      _new := {{NEW_ROW}};
-    ELSE
-    /* initialize _old and _new with dummy values for INSERT and UPDATE events*/
-      _old := row((select 1));
-      _new := row((select 1));
+{% if (OPERATION == "UPDATE") && (SHOULD_DIFF == "True") %}
+    _old := {{OLD_ROW}};
+    _new := {{NEW_ROW}};
+    IF (_old <> _new) THEN
+      _data := json_build_object(
+        'old', {{OLD_PAYLOAD_EXPRESSION}},
+        'new', {{NEW_PAYLOAD_EXPRESSION}}
+      );
+      PERFORM hdb_catalog.insert_event_log(CAST(TG_TABLE_SCHEMA AS text), CAST(TG_TABLE_NAME AS text), CAST('{{NAME}}' AS text), TG_OP, _data);
     END IF;
+{% else %}
     _data := json_build_object(
       'old', {{OLD_PAYLOAD_EXPRESSION}},
       'new', {{NEW_PAYLOAD_EXPRESSION}}
     );
-    IF (TG_OP <> 'UPDATE') OR (_old <> _new) THEN
-      PERFORM hdb_catalog.insert_event_log(CAST(TG_TABLE_SCHEMA AS text), CAST(TG_TABLE_NAME AS text), CAST('{{NAME}}' AS text), TG_OP, _data);
-    END IF;
+    PERFORM hdb_catalog.insert_event_log(CAST(TG_TABLE_SCHEMA AS text), CAST(TG_TABLE_NAME AS text), CAST('{{NAME}}' AS text), TG_OP, _data);
+{% endif %}
     RETURN NULL;
   END;
 $$;
