--- a/console/src/components/Common/Common.scss
+++ b/console/src/components/Common/Common.scss
@@ -496,6 +496,10 @@ input {
   margin-right: 20px !important;
 }
 
+.add_mar_right_mid {
+  margin-right: 10px !important;
+}
+
 .add_mar_right_small {
   margin-right: 5px !important;
 }
@@ -506,6 +510,10 @@ input {
 
 .add_mar_left_small {
   margin-left: 5px;
+}
+
+.add_mar_left_mid {
+  margin-left: 10px;
 }
 
 .add_mar_small {
