add schema create/delete options in console (closes #2142) (#2143)

--- a/console/src/components/Common/Common.scss
+++ b/console/src/components/Common/Common.scss
@@ -510,6 +510,10 @@ input {
   margin-right: 20px !important;
 }
 
+.add_mar_right_mid {
+  margin-right: 10px !important;
+}
+
 .add_mar_right_small {
   margin-right: 5px !important;
 }
@@ -520,6 +524,10 @@ input {
 
 .add_mar_left_small {
   margin-left: 5px;
+}
+
+.add_mar_left_mid {
+  margin-left: 10px;
 }
 
 .add_mar_small {
