support allow-list for graphql queries (closes #989) (#2075)

--- a/console/src/components/Services/Metadata/Metadata.scss
+++ b/console/src/components/Services/Metadata/Metadata.scss
@@ -1,4 +1,4 @@
-@import "../../Common/Common";
+@import "../../Common/Common.scss";
 
 .metadata_wrapper {
   h4 {
@@ -20,7 +20,7 @@
 
   .content_width {
     margin-top: 10px;
-    width: 50%;
+    width: 60%;
   }
 }
 
