Add json editor for json input

--- a/console/src/components/Common/Common.scss
+++ b/console/src/components/Common/Common.scss
@@ -54,6 +54,10 @@ table thead tr th {
   top: 10px;
   right: 10px;
   z-index: 100;
+  opacity: 0.3;
+  &:hover {
+    opacity: 1.0;
+  }
 }
 .pageSidebar {
   height: calc(100vh - 50px);
