fix browse row scroll

--- a/console/src/components/Common/TableCommon/Table.scss
+++ b/console/src/components/Common/TableCommon/Table.scss
@@ -197,11 +197,12 @@ a.expanded {
   text-align: center;
   overflow: unset !important;
 }
-.tableCellCenterAlignedOverflow
-{
+
+.tableCellCenterAlignedOverflow {
   text-align: center;
   overflow: hidden !important;
 }
+
 .tableCellExpanded {
   white-space: normal;
 }
