refactor schema management in console and misc fixes (#2016)
close #1704, #2174, #2188, #2006, #2031, #1617, #1882

--- a/console/src/components/Common/TableCommon/Table.scss
+++ b/console/src/components/Common/TableCommon/Table.scss
@@ -6,10 +6,8 @@
 
 .tableContainer {
   overflow: auto;
-  //margin-top: 25px;
-}
-
-.tableContainerModified {
+  width: 95%;
+  padding-right: 5px; // removes scrollbar if width is enough
 }
 
 .schemaWrapper {
@@ -199,11 +197,12 @@ a.expanded {
   text-align: center;
   overflow: unset !important;
 }
-.tableCellCenterAlignedOverflow
-{
+
+.tableCellCenterAlignedOverflow {
   text-align: center;
   overflow: hidden !important;
 }
+
 .tableCellExpanded {
   white-space: normal;
 }
