--- a/console/src/components/Common/CustomInputTypes/JsonInput.scss
+++ b/console/src/components/Common/CustomInputTypes/JsonInput.scss
@@ -1,8 +1,8 @@
-.jsonInput {
+.jsonNormalInput {
   padding-right: 30px;
 }
 
-.jsonButtonAlign {
+.jsonToggleButton {
   position: absolute;
   top: 10px;
   right: 10px;
