--- a/community/learn/graphql-tutorials/backend-services/homepage/src/styles/styles.scss
+++ b/community/learn/graphql-tutorials/backend-services/homepage/src/styles/styles.scss
@@ -6,6 +6,10 @@ body
   font-size: 16px;
   font-family: 'Roboto'
 }
+.carousel-indicators .active
+{
+  background-color: #250687 !important;
+}
 .wd100
 {
   width: 100%;
@@ -971,7 +975,7 @@ ul
     {
       font-size: 14px;
       font-family: 'Open Sans';
-      font-weight: 400;
+      font-weight: 600;
       padding-bottom: 15px;
       color: #CECECE;
       a
