--- a/console/src/components/Services/Data/TableRelationships/RemoteRelationships/SchemaExplorer.scss
+++ b/console/src/components/Services/Data/TableRelationships/RemoteRelationships/SchemaExplorer.scss
@@ -1,4 +1,4 @@
-@import "../../../Common/Common.scss";
+@import "../../../../Common/Common.scss";
 
 .schemaExplorerContainer {
   background-color: #f7f7f7;
