--- a/console/src/components/Common/Common.scss
+++ b/console/src/components/Common/Common.scss
@@ -1333,6 +1333,10 @@ code {
   width: 300px;
 }
 
+.overflowAuto {
+  overflow: auto;
+}
+
 /* container height subtracting top header and bottom scroll bar */
 $mainContainerHeight: calc(100vh - 50px - 25px);
 
