Fix based on suggestions/feedback

--- a/console/src/components/Common/CustomInputAutoSuggest/CustomThemes/AddColumnDefault.scss
+++ b/console/src/components/Common/CustomInputAutoSuggest/CustomThemes/AddColumnDefault.scss
@@ -1,8 +1,9 @@
-@import './CustomInputTheme.scss';
+@import '../Theme.scss';
 
 .suggestionsContainerOpen {
   top: 30px;
-  width: 100%;
+  width: 280px;
+  left: 5px;
 }
 
 .suggestion {
