--- a/console/src/components/Common/CustomInputAutoSuggest/CustomThemes/EditColumnDefault.scss
+++ b/console/src/components/Common/CustomInputAutoSuggest/CustomThemes/EditColumnDefault.scss
@@ -1,9 +1,8 @@
-@import './CustomInputTheme.scss';
+@import '../Theme.scss';
 
 .suggestionsContainerOpen {
   top: 30px;
-  width: 280px;
-  left: 5px;
+  width: 100%;
 }
 
 .suggestion {
