--- a/console/src/components/Common/Common.scss
+++ b/console/src/components/Common/Common.scss
@@ -1337,6 +1337,11 @@ code {
   overflow: auto;
 }
 
+.tooltip {
+  cursor: pointer;
+  color: #4D4D4D;
+}
+
 /* container height subtracting top header and bottom scroll bar */
 $mainContainerHeight: calc(100vh - 50px - 25px);
 
