show warning for identifiers which do not conform to GraphQL name scheme, close #212

--- a/console/src/components/Common/Common.scss
+++ b/console/src/components/Common/Common.scss
@@ -85,7 +85,6 @@ table thead tr th {
       border-bottom: 1px solid #E6E6E6;
       padding: 0px 0px;
       // border-left: 5px solid transparent;
-
       a {
         color: #767E93;
         background-color: #f0f0f0;
@@ -116,7 +115,7 @@ table thead tr th {
         display: inline-block;
       }
     }
-   }
+  }
 }
 
 .sidebarCreateTable {
@@ -1315,6 +1314,12 @@ code {
 
 .pkEditorExpandedText {
   width: 325px;
+}
+
+.scheme_warning {
+  i {
+    margin-left: 5px;
+  }
 }
 
 .wd100Percent {
