--- a/console/src/components/Common/Layout/LeftSubSidebar/LeftSubSidebar.scss
+++ b/console/src/components/Common/Layout/LeftSubSidebar/LeftSubSidebar.scss
@@ -133,7 +133,7 @@
 
   li {
     border-bottom: 0px !important;
-    padding: 0 0 !important;
+    padding: 4px 0 !important;
 
     .tableFunctionDivider {
       margin-top: 5px;
@@ -146,7 +146,7 @@
       padding: 5px 0px !important;
       font-weight: 400 !important;
       padding-left: 5px !important;
-
+      display: initial !important;
       .tableIcon, .functionIcon {
         margin-right: 5px;
         font-size: 12px;
@@ -161,7 +161,6 @@
       }
     }
   }
-
   .noChildren {
     font-weight: 400 !important;
     padding-bottom: 10px !important;
