allow adding string values for scalar args

--- a/console/src/components/Services/Data/TableRelationships/RemoteRelationships/SchemaExplorer.scss
+++ b/console/src/components/Services/Data/TableRelationships/RemoteRelationships/SchemaExplorer.scss
@@ -34,3 +34,9 @@
   background-color: white; 
   border: 1px solid #ccc;
 }
+
+.argValue {
+  background-color: white;
+  height: 30px;
+  padding: 5px;
+}
