show comment in col summary

--- a/console/src/components/Common/Common.scss
+++ b/console/src/components/Common/Common.scss
@@ -853,6 +853,10 @@ code {
   background: #f2f2f2 !important;
 }
 
+.text_gray {
+  color: #767E96
+}
+
 .docsButton {
   background-color: #fff;
   border-radius: 5px;
