--- a/console/src/components/Common/Dropdown/Dropdown.scss
+++ b/console/src/components/Common/Dropdown/Dropdown.scss
@@ -3,9 +3,11 @@
 .data_dropdown_wrapper {
   display: inline-block;
   width: 100%;
+
   .dataDropdown {
     position: relative;
     width: 100%;
+
     .dropdown_wrapper {
       border-radius: 5px;
       width: auto;
@@ -16,6 +18,7 @@
       color: yellow;
       -webkit-padding-start: 0px;
       z-index: 10;
+
       li {
         display: flex;
         align-items: center;
@@ -24,41 +27,46 @@
         text-align: left;
         padding: 10px 15px;
         border-bottom: 1px solid #ededed;
+
         button {
           margin-right: 5px;
         }
+        
         // &:hover {
         //   background-color: #eee;
         // }
       }
+
       li:last-child {
         border-bottom: none;
       }
     }
-    .dropdownRight
-    {
+
+    .dropdownRight {
       top: -12px;
       left: 35px;
     }
-    .dropdownBottom
-    {
+
+    .dropdownBottom {
       top: 38px;
       left: 0;
     }
-    .dropdownRight:before, .dropdownBottom:before {
+
+    .dropdownRight:before,
+    .dropdownBottom:before {
     	content: "";
     	position: absolute;
     	border: solid 5px transparent;
       z-index: 10000;
     }
-    .dropdownRight:before
-    {
+
+    .dropdownRight:before {
       border-right-color: white;
       left: -10px;
       top: 17px;
     }
-    .dropdownBottom:before
-    {
+
+    .dropdownBottom:before {
       border-bottom-color: white;
       top: -10px;
       left: 20px;
