fix list-table heading css issue

--- a/docs/_static/hasura-custom.css
+++ b/docs/_static/hasura-custom.css
@@ -182,6 +182,10 @@ ul {
   width:  100%;
 }
 
+#docs-content table caption {
+  position: relative;
+}
+
 /*** random overrides ***/
 
 .wy-plain-list-decimal ol,
