add label of editing mode

--- a/console/src/components/Common/CustomInputTypes/TextInput.scss
+++ b/console/src/components/Common/CustomInputTypes/TextInput.scss
@@ -12,3 +12,11 @@
     opacity: 1.0;
   }
 }
+
+.textEditType {
+  position: absolute;
+  top: 4px;
+  right: 28px;
+  z-index: 100;
+  font-style: italic;
+}
