display table triggers

--- a/console/src/components/Common/Common.scss
+++ b/console/src/components/Common/Common.scss
@@ -511,6 +511,10 @@ input {
   margin-bottom: 10px;
 }
 
+.add_mar_bottom_small {
+  margin-bottom: 5px;
+}
+
 .add_mar_right {
   margin-right: 20px !important;
 }
