--- a/console/src/components/Services/Common/Notification/NotificationOverrides.css
+++ b/console/src/components/Services/Common/Notification/NotificationOverrides.css
@@ -22,4 +22,7 @@
 
 .notifications-wrapper .notification .notification-details {
   width: 75vw;
+  max-height: 300px;
+  position: relative;
+  margin-top: 10px;
 }
